--- a/mprpc/src/CMakeLists.txt
+++ b/mprpc/src/CMakeLists.txt
@@ -7,4 +7,4 @@ aux_source_directory(. SRC_LIST)
 # set(SRC_LIST mprpcapplication.cc mprpcconfig.cc) 
 #生成动态库
 add_library(mprpc ${SRC_LIST})
-target_link_libraries(mprpc muduo_net muduo_base pthread)
+target_link_libraries(mprpc muduo_net muduo_base zookeeper_mt pthread)
